# data-analyist-agent

./: .env  .gitignore  README.md  agent_memory.db  app.py  constants.py  context_builder.py  depricated_agent.py  graph.py  llm.py  logger.py  models.py  nodes.py  planner.py  pyproject.toml  registry.py  requirements.txt  router.py  state.py  test_registry.py  test_tools.py  tools.py
database/: create_db.py  sales.db
docs/diagrams/: agent_graph.mmd
memory/: short_term.py
scripts/: visualize_graph.py
src/data_analyst_agent/: __init__.py  __main__.py  cli.py
src/data_analyst_agent/agent/: __init__.py  graph.py  nodes.py  reflection_routing.py  state.py  tool_routing.py
src/data_analyst_agent/core/: __init__.py  llm.py
src/data_analyst_agent/domain/: __init__.py  enums.py  models.py
src/data_analyst_agent/memory/: __init__.py  database.py  long_term.py  short_term.py  vector_store.py
src/data_analyst_agent/services/: __init__.py  context.py  embedding_service.py  memory_classifier.py  memory_consolidator.py  memory_manager.py  memory_ranker.py  planner.py  (+2 more)
tests/: __init__.py  conftest.py  test_executor_node.py  test_llm_config.py  test_reflection_node.py  test_reflection_routing.py  test_registry.py  test_repair_flow.py  test_repair_node.py  test_repair_service.py  test_tool_routing.py  test_tools.py
tests/agent/: __init__.py
tests/memory/: __init__.py  test_long_term.py  test_memory_classifier.py  test_memory_consolidator.py  test_memory_manager.py  test_memory_ranker.py  test_memory_retriever.py  test_short_term.py
tests/services/: __init__.py
(+13 files in other folders)
