[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analyst-agent"
version = "0.1.0"
description = "A LangGraph-powered agent for analysing the sales dataset."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
data-analyst-agent = "data_analyst_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
